@@ -54,7 +54,6 @@
 				</animation>
 				<include>OpenClose_Right</include>
 				<control type="group" id="22000">
-					<top>35</top>
 					<animation effect="slide" end="502,0" time="200" tween="quadratic" easing="out" condition="[Control.HasFocus(9000) | ControlGroup(700).HasFocus] + Skin.HasSetting(HideMainMenuWithWidgets)">Conditional</animation>
 					<visible>String.IsEqual(Container(9000).ListItem.Property(widget),PersonalWidget)</visible>
 					<animation effect="fade" end="100" time="200" condition="Skin.HasSetting(no_slide_animations)">Visible</animation>
@@ -62,9 +61,20 @@
 						<effect type="fade" start="0" end="100" time="300" tween="sine" delay="300" easing="out" />
 						<effect type="slide" start="320" end="0" time="400" delay="300" tween="cubic" easing="out" />
 					</animation>
+					<animation effect="slide" end="0,35" time="0" condition="!String.IsEmpty(Container(9000).ListItem.Property(HideSubMenu))">Conditional</animation>
 					<control type="grouplist" id="22001">
 						<include>WidgetGroupListCommon</include>
 						<pagecontrol>22010</pagecontrol>
+						<include content="WidgetListCategoriesBig">
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="list_id" value="22900"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories) + String.IsEmpty(Container(9000).ListItem.Property(HideSubMenu))" />
+						</include>
+						<include content="WidgetListCategoriesSmall">
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="list_id" value="229001"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories) + String.IsEmpty(Container(9000).ListItem.Property(HideSubMenu))" />
+						</include>
 						<include content="WidgetListPoster">
 							<param name="content_path" value="$INFO[Container(9000).ListItem.Property(widgetPath.personal1)]"/>
 							<param name="widget_header" value="$INFO[Container(9000).ListItem.Property(widgetName.personal1)]"/>
