@@ -193,6 +193,12 @@
                    <visible>String.IsEqual(Window.Property(groupname),mainmenu)</visible>
                    <visible>!String.IsEqual(Container(211).ListItem.Property(defaultID),libreelec) + !String.IsEqual(Container(211).ListItem.Property(widget),PicturesWidget) + !String.IsEqual(Container(211).ListItem.Property(widget),GamesWidget) + !String.IsEqual(Container(211).ListItem.Property(widget),FavoritesWidget) + !String.IsEqual(Container(211).ListItem.Property(widget),WeatherWidget)</visible>
                 </control>
+                <control type="radiobutton" id="3129">
+                    <label>  ∟$LOCALIZE[31132]</label>
+                    <include>DefaultSettingButton</include>
+                    <selected>!String.IsEmpty(Container(211).ListItem.Property(HideSubMenu)</selected>
+                    <visible>String.IsEqual(Container(211).ListItem.Property(widget),PersonalWidget)</visible>
+                </control>
 				<control type="button" id="312">
 					<include>DefaultSettingButton</include>
 					<label></label>
